[gd_scene load_steps=20 format=3 uid="uid://58q46cfd4c7s"]

[ext_resource type="Script" path="res://assets/scripts/puzzles/bridge/bridge_puzzle.gd" id="1_j21xi"]
[ext_resource type="PackedScene" uid="uid://36isl4yydo8j" path="res://assets/scenes/puzzles/bridges/Bridge.tscn" id="2_7jim8"]
[ext_resource type="ArrayMesh" uid="uid://b2glvja3bwopx" path="res://assets/meshes/puzzles/bridges/bridge_near.res" id="3_v78d7"]
[ext_resource type="ArrayMesh" uid="uid://1m8bnk1ceab1" path="res://assets/meshes/puzzles/bridges/bridge_center.res" id="4_nvwbq"]
[ext_resource type="ArrayMesh" uid="uid://cll165scyq40i" path="res://assets/meshes/puzzles/bridges/bridge_far.res" id="5_gfxxk"]
[ext_resource type="ArrayMesh" uid="uid://dolmy0ij7d5md" path="res://assets/meshes/puzzles/bridges/bridge_fork.res" id="6_yhjdq"]
[ext_resource type="ArrayMesh" uid="uid://dbayil7433alb" path="res://assets/meshes/puzzles/bridges/bridge_connector.res" id="7_6ghf4"]
[ext_resource type="Shape3D" uid="uid://du3hn44p5ebux" path="res://assets/resources/bridge_connector_collision_trimesh.res" id="8_yipxl"]
[ext_resource type="PackedScene" uid="uid://cbrk76w3ddjk" path="res://assets/scenes/puzzles/bridges/switch.tscn" id="9_74nvo"]
[ext_resource type="PackedScene" uid="uid://bgp2ju10gca2b" path="res://assets/scenes/torches/torch_toggleable.tscn" id="10_fqexa"]
[ext_resource type="PackedScene" uid="uid://c2l81vbxd834i" path="res://assets/scenes/puzzles/key.tscn" id="11_eevwp"]

[sub_resource type="BoxShape3D" id="BoxShape3D_813sy"]
size = Vector3(3, 0.5, 1)

[sub_resource type="NavigationMesh" id="NavigationMesh_lq0fn"]
vertices = PackedVector3Array(-1.2, 4.35, -0.2, -1.2, 4.35, 0.2, 1.2, 4.35, 0.2, 1.2, 4.35, -0.2)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]
cell_size = 0.1
cell_height = 0.05
agent_radius = 0.3

[sub_resource type="NavigationMesh" id="NavigationMesh_omysd"]
vertices = PackedVector3Array(-1.2, 4.35, -0.2, -1.2, 4.35, 0.2, 1.2, 4.35, 0.2, 1.2, 4.35, -0.2)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]
cell_size = 0.1
cell_height = 0.05
agent_radius = 0.3

[sub_resource type="NavigationMesh" id="NavigationMesh_egdex"]
vertices = PackedVector3Array(-1.2, 4.35, -0.2, -1.2, 4.35, 0.2, 1.2, 4.35, 0.2, 1.2, 4.35, -0.2)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]
cell_size = 0.1
cell_height = 0.05
agent_radius = 0.3

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_d4aal"]
data = PackedVector3Array(0.33, 0, 0, 0.2333, 4, 0.2333, 0.33, 4, 0, 0.33, 0, 0, 0.2333, 0, 0.2333, 0.2333, 4, 0.2333, 0.2333, 0, 0.2333, 0, 4, 0.33, 0.2333, 4, 0.2333, 0.2333, 0, 0.2333, 0, 0, 0.33, 0, 4, 0.33, 0, 0, 0.33, -0.2333, 4, 0.2333, 0, 4, 0.33, 0, 0, 0.33, -0.2333, 0, 0.2333, -0.2333, 4, 0.2333, -0.2333, 0, 0.2333, -0.33, 4, 0, -0.2333, 4, 0.2333, -0.2333, 0, 0.2333, -0.33, 0, 0, -0.33, 4, 0, -0.33, 0, 0, -0.2333, 4, -0.2333, -0.33, 4, 0, -0.33, 0, 0, -0.2333, 0, -0.2333, -0.2333, 4, -0.2333, -0.2333, 0, -0.2333, 0, 4, -0.33, -0.2333, 4, -0.2333, -0.2333, 0, -0.2333, 0, 0, -0.33, 0, 4, -0.33, 0, 0, -0.33, 0.2333, 4, -0.2333, 0, 4, -0.33, 0, 0, -0.33, 0.2333, 0, -0.2333, 0.2333, 4, -0.2333, 0.2333, 0, -0.2333, 0.33, 4, 0, 0.2333, 4, -0.2333, 0.2333, 0, -0.2333, 0.33, 0, 0, 0.33, 4, 0, -0.5, 3.75, -0.4999, 0.5, 4.25, -0.4999, -0.5, 4.25, -0.4999, -0.5, 3.75, -0.4999, 0.5, 3.75, -0.4999, 0.5, 4.25, -0.4999, 0.5, 3.75, -0.4999, 0.5, 4.25, 2.5001, 0.5, 4.25, -0.4999, 0.5, 3.75, -0.4999, 0.5, 3.75, 2.5001, 0.5, 4.25, 2.5001, 0.5, 3.75, 2.5001, -0.5, 4.25, 2.5001, 0.5, 4.25, 2.5001, 0.5, 3.75, 2.5001, -0.5, 3.75, 2.5001, -0.5, 4.25, 2.5001, -0.5, 3.75, 2.5001, -0.5, 4.25, -0.4999, -0.5, 4.25, 2.5001, -0.5, 3.75, 2.5001, -0.5, 3.75, -0.4999, -0.5, 4.25, -0.4999, 0.5, 3.75, -0.4999, -0.5, 3.75, 2.5001, 0.5, 3.75, 2.5001, 0.5, 3.75, -0.4999, -0.5, 3.75, -0.4999, -0.5, 3.75, 2.5001, 0.5, 4.25, 2.5001, -0.5, 4.25, -0.4999, 0.5, 4.25, -0.4999, 0.5, 4.25, 2.5001, -0.5, 4.25, 2.5001, -0.5, 4.25, -0.4999)

[sub_resource type="NavigationMesh" id="NavigationMesh_mi1s3"]
vertices = PackedVector3Array(-0.2, 4.35, -0.199934, -0.2, 4.35, 2.20007, 0.2, 4.35, 2.20007, 0.2, 4.35, -0.199934)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]
cell_size = 0.1
cell_height = 0.05
agent_radius = 0.3

[sub_resource type="NavigationMesh" id="NavigationMesh_4wvqv"]
vertices = PackedVector3Array(23.3, 0.174937, -2.2, 23.3, 0.174937, -1.8, 24.6, 0.0749373, -1.8, 24.6, 0.0749373, -2.2)
polygons = [PackedInt32Array(3, 2, 0), PackedInt32Array(0, 2, 1)]
cell_size = 0.1
cell_height = 0.05
agent_radius = 0.3

[sub_resource type="BoxShape3D" id="BoxShape3D_8ebc2"]
size = Vector3(8.3728, 4.51179, 3.14366)

[node name="BridgePuzzle" type="Node3D"]
script = ExtResource("1_j21xi")

[node name="BridgeNearBody" parent="." instance=ExtResource("2_7jim8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 15.5, -4.15, -2)
torch_path = NodePath("../Torch1")

[node name="SurfaceCollision" type="CollisionShape3D" parent="BridgeNearBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.99948, 0)
shape = SubResource("BoxShape3D_813sy")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="BridgeNearBody"]
navmesh = SubResource("NavigationMesh_lq0fn")

[node name="BridgeNear" type="MeshInstance3D" parent="BridgeNearBody/NavigationRegion3D"]
mesh = ExtResource("3_v78d7")
skeleton = NodePath("")

[node name="BridgeCenterBody" parent="." instance=ExtResource("2_7jim8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.5, -4.15, -2)
torch_path = NodePath("../Torch2")

[node name="SurfaceCollision" type="CollisionShape3D" parent="BridgeCenterBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.99948, 0)
shape = SubResource("BoxShape3D_813sy")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="BridgeCenterBody"]
navmesh = SubResource("NavigationMesh_omysd")

[node name="BridgeCenter" type="MeshInstance3D" parent="BridgeCenterBody/NavigationRegion3D"]
mesh = ExtResource("4_nvwbq")
skeleton = NodePath("")

[node name="BridgeFarBody" parent="." instance=ExtResource("2_7jim8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 21.5, -4.15, -2)
torch_path = NodePath("../Torch3")

[node name="SurfaceCollision" type="CollisionShape3D" parent="BridgeFarBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.99948, 0)
shape = SubResource("BoxShape3D_813sy")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="BridgeFarBody"]
navmesh = SubResource("NavigationMesh_egdex")

[node name="BridgeFar" type="MeshInstance3D" parent="BridgeFarBody/NavigationRegion3D"]
mesh = ExtResource("5_gfxxk")
skeleton = NodePath("")

[node name="BridgeForkBody" parent="." instance=ExtResource("2_7jim8")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 25.358, -4.252, -2)
rotation_target = 3.142
disable_collision_on_rotate = false

[node name="SurfaceCollision" type="CollisionShape3D" parent="BridgeForkBody"]
shape = SubResource("ConcavePolygonShape3D_d4aal")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="BridgeForkBody"]
navmesh = SubResource("NavigationMesh_mi1s3")

[node name="BridgeFork" type="MeshInstance3D" parent="BridgeForkBody/NavigationRegion3D"]
mesh = ExtResource("6_yhjdq")
skeleton = NodePath("")

[node name="NavigationRegion3D" type="NavigationRegion3D" parent="."]
navmesh = SubResource("NavigationMesh_4wvqv")

[node name="BridgeConnector" type="MeshInstance3D" parent="NavigationRegion3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 23, -0.25187, -2)
mesh = ExtResource("7_6ghf4")
skeleton = NodePath("")

[node name="StaticBody3D" type="StaticBody3D" parent="NavigationRegion3D/BridgeConnector"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="NavigationRegion3D/BridgeConnector/StaticBody3D"]
shape = ExtResource("8_yipxl")

[node name="Switch1" parent="." instance=ExtResource("9_74nvo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 16.922, 0.589, -4.19)
bridge_paths = [NodePath("../BridgeNearBody"), NodePath("../BridgeCenterBody"), NodePath("../BridgeFarBody")]

[node name="Switch2" parent="." instance=ExtResource("9_74nvo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 18.9224, 0.588732, -4.18982)
bridge_paths = [NodePath("../BridgeCenterBody"), NodePath("../BridgeForkBody")]

[node name="Switch3" parent="." instance=ExtResource("9_74nvo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 20.922, 0.589, -4.19)
bridge_paths = [NodePath("../BridgeNearBody"), NodePath("../BridgeFarBody")]

[node name="Switch4" parent="." instance=ExtResource("9_74nvo")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 22.922, 0.589, -4.19)
bridge_paths = [NodePath("../BridgeCenterBody"), NodePath("../BridgeFarBody")]

[node name="Torch1" parent="." instance=ExtResource("10_fqexa")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 15.5, 2.5, -0.265641)

[node name="Torch2" parent="." instance=ExtResource("10_fqexa")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 18.5, 2.5, -0.266)

[node name="Torch3" parent="." instance=ExtResource("10_fqexa")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 21.5, 2.5, -0.266)

[node name="Key" parent="." instance=ExtResource("11_eevwp")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 27.0647, 1.32209, -6.21566)
collision_layer = 4

[node name="EncounterArea" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 19.2656, 0.99555, -5.65808)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape3D" type="CollisionShape3D" parent="EncounterArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.54334, 0)
shape = SubResource("BoxShape3D_8ebc2")

[connection signal="body_entered" from="EncounterArea" to="." method="_on_encounter_area_body_entered"]
